# nfl_random_walks

./: .gitignore  README.md  extract.py  main.py  pyproject.toml
data/: example.csv
